--- a/_posts/2012-03-19-lisp.md
+++ b/_posts/2012-03-19-lisp.md
@@ -3,7 +3,7 @@ layout: post
 title: "Lisp是什么？"
 date: 2012-03-19 22:13
 comments: true
-categories: [ LISP, 编程语言, 中文 ]
+tags: [ LISP, 编程语言, 中文 ]
 ---
 
   偶尔读到一篇博客文章 [LISP的本质(THE NATURE OF LISP)](http://www.cnblogs.com/Leap-abead/articles/762180.html) ，一下子就被LISP吸引了。
