--- a/_posts/2013-03-17-tddbc-tokyo-201303.md
+++ b/_posts/2013-03-17-tddbc-tokyo-201303.md
@@ -3,7 +3,7 @@ layout: post
 title: "TDDBC Tokyo 2013-03に参加しました"
 date: 2013-03-17 21:52
 comments: true
-categories:
+tags:
 ---
 TDDBCは、結構前から参加したかったんですが、すごく人気あるイベントなので、運が良くなくて、分かった時点で既に募集人数が倍になっている状態だった。
 
