--- a/_posts/2013-04-17-sq3r.md
+++ b/_posts/2013-04-17-sq3r.md
@@ -3,7 +3,7 @@ layout: post
 title: "SQ3R読書法"
 date: 2013-04-17 13:46
 comments: true
-categories: Read
+tags: Read
 ---
 ネタもと：[如何对某一点知识进行深入学习——从《程序员的思维修炼》中SQ3R阅读法想到的](http://ruby-china.org/topics/10213)
 
