--- a/_posts/2012-04-03-rails3dojo.md
+++ b/_posts/2012-04-03-rails3dojo.md
@@ -3,7 +3,7 @@ layout: post
 title: "「浜松Rails3道場　其の壱　プロジェクト作成〜Rouging編」の写経(1)"
 date: 2012-04-03 07:30
 comments: true
-categories: [ Rails, Pow, RSpec]
+tags: [ Rails, Pow, RSpec]
 ---
 [浜松Rails3道場　其の壱　プロジェクト作成〜Rouging編](http://www.slideshare.net/mackato/rails3dojo-routing)
 
