不要なカンマを削除

--- a/_posts/2012-05-16-bundler.md
+++ b/_posts/2012-05-16-bundler.md
@@ -3,7 +3,7 @@ layout: post
 title: "Bundler改めて調べてみた"
 description: ""
 category: Bundler
-tags: [Ruby, zsh]
+tags: Ruby zsh
 ---
 `Bundler`の使い方について、今までは使っていますが、細かくは分かっていなかった。`RVM`と`rbenv`との比較を調べた時、`rbenv`+`bundler`でgemを管理するのは十分という記事があったので、改めて`bundler`を調べてみた。
 
