--- a/_posts/2012-06-04-cucumber.md
+++ b/_posts/2012-06-04-cucumber.md
@@ -3,7 +3,7 @@ layout: post
 title: "はじめる！Cucumber写経　環境構築"
 description: ""
 category: Cucumber
-tags: [Rails, RSpec]
+tags: Rails RSpec
 published: true
 ---
 [はじめる！Cucumber](http://tatsu-zine.com/books/cuke)は、分かった時点ですぐ購入しちゃったんですが、ずっと放置したままだった。最近[Yokohamarb #20](http://bukt.org/events/31)に参加して、またテスト周りのお話しが出たので、Cucumberを勉強したくなった。
