--- a/_posts/2016-11-22-rails-i18n-off.md
+++ b/_posts/2016-11-22-rails-i18n-off.md
@@ -1,6 +1,17 @@
+---
+layout: post
+title: "Rails I18n 'off'"
+date: 2016-11-23
+---
+
 ## 問題
 Rails で I18n を定義する時、 key が off である時は、見つからないようです。
 
 ## 調査
+- [x] Rails 5.0.0.1 で空プロジェクトで、`I18n.t(:off)`では見つからない
+- [x] I18nは別gemになっている
+    - [x] gem 単体では、 メモリから探す時は`off` は特別扱いがない
+    - [ ] YAML からロードする時のバグ？
+- [ ] Rails の問題？
 
 
