--- a/_posts/2017-02-04_logistic.md
+++ b/_posts/2017-02-04_logistic.md
@@ -1,3 +1,9 @@
+---
+layout: post
+title: "回归与梯度"
+date: 2017-2-4
+---
+
 ## 回归／梯度
 - 回归是什么？
     - 数学上的回归：给定一个点集，用曲线去拟合
@@ -15,8 +21,6 @@
     - 改变参数的值，使得`j`按梯度下降的额方向减少
         - 对每一个特征值的参数，都可以求出一个梯度
         - 用所有参数的梯度求出一个整体的方向，就可以朝着下降最多的方向进行变化
-
-## logistic回归
 
 ## 问题
 - [ ] logistic回归是什么？
